# template-python-cli

./: .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/adr/: 001-typer-cli-framework.md  002-hexagonal-architecture.md  003-pytest-bdd-testing.md
src/template_python_cli/: __init__.py  __main__.py  cli.py
src/template_python_cli/application/: greeter.py
src/template_python_cli/domain/: __init__.py  errors.py  exit_codes.py
src/template_python_cli/infrastructure/: __init__.py  config.py  console.py  logging.py
tests/: conftest.py
tests/features/: cli.feature
tests/step_defs/: test_cli.py
